{
    "name": "InputMaps",
    "maps": [
        {
            "name": "TouchScreen",
            "id": "9cf78122-b239-48d6-9767-1b4727527b5c",
            "actions": [
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "2401d810-288b-4966-9913-c5e883ce00f7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PointerPress",
                    "type": "Button",
                    "id": "40d355c2-5bd8-4c84-88a4-21d023b32e41",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a0db7d71-c601-4fd8-a0f9-2b0050e066c8",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6febb924-bd82-4458-994b-62c8ac02abe2",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}